Updated site content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kya0xC | Offensive Security Portfolio</title>
+    <title>Cyberkya | Offensive Security Portfolio</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap"
       rel="stylesheet"
@@ -101,7 +101,7 @@
   </head>
   <body>
     <header>
-      <h1>Kya0xC</h1>
+      <h1>KyaSec0xc</h1>
       <h2>Offensive Security | Penetration Tester | Cyberpunk Enthusiast</h2>
     </header>
 
@@ -127,7 +127,7 @@
       <ul>
         <li><strong>ZeroTrace</strong>: Custom C2 for internal pen tests</li>
         <li><strong>PhishEye</strong>: Spear phishing kit with evasion</li>
-        <li><strong>HackBox</strong>: Virtual vulnerable labs</li>
+        <li><strong>Tryhackme</strong>: Virtual vulnerable labs</li>
       </ul>
     </section>
 
@@ -135,8 +135,8 @@
       <h3>Contact</h3>
       <p>
         Email:
-        <a href="mailto:kya0xC@protonmail.com" style="color: #33ff33"
-          >kya0xC@protonmail.com</a
+        <a href="mailto:kya.cybernerd@gmail.com" style="color: #33ff33"
+          >kya.cybernerd@gmail.com</a
         >
       </p>
       <p>
